--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             }
             header, footer{
                 background-color: #333;
-                color:#fff;
+                color:#f2ff;
                 padding: 20px;
             }
             main{
