--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             }
             button:hover{
 
-            background-color:#555;}
+            background-color:#fff;}
             </style>
             <h1>Welcome to Matandaria Website</h1>
         </header>
