--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             button{
                 padding: 10px 20px;
                 background-color: #333;
-                color: #fff;
+                color: #555;
                 border: none;
                 cursor: pointer;
             }
