--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <style>
                 body{
                 font-family:Arial,sans-serif;
-                margin-left:0;
+                margin:0;
                 padding: 0;
             }
             header, footer{
