--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 cursor: pointer;
             }
             button:hover{
-
-            background-color:#fff;}
+                margin-right:0;
+                 background-color:#fff;}
             </style>
             <h1>Welcome to Matandaria Website</h1>
         </header>
