--- a/index.html
+++ b/index.html
@@ -50,7 +50,15 @@
                 <h2>
                     About us
                 </h2>
-                <p>Welcome to Matandaria Website. We provide[brief descriptions of product/services].</p>
+                <p>Welcome to Matandaria Website.</p>
+            </section>
+            <section>
+                <h2>Services</h2>
+                <p>We provide quality services</p>
+            </section>
+            <section>
+                <h2>Products</h2>
+                <button type="explore">Click me!</button>
             </section>
             <section>
                 <h2>
