--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
                 <h2>
                     contact us
                 </h2>
+                <p>Phone no: 0794218899</p>
+            </section>
+            <section>
+                <h2>Provide your details</h2>
                 <form action="/contact"method="post">
                     <label for="name">Name:
                     </label>
