--- a/index.html
+++ b/index.html
@@ -1,93 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport"content="width=device-width,initial-scale=1.0">
-<title>Matandaria Website</title>
-<link rel="stylesheet"href="styles.css">
-    </head>
-    <body>
-        <header>
-            <style>
-                body{
-                font-family:Arial,sans-serif;
-                margin:0;
-                padding: 0;
-            }
-            header, footer{
-                background-color: #478778;
-                color:#f2ff;
-                padding: 20px;
-            }
-            main{
-                padding: 20px;
-            }
-            form{
-                margin-top: :20px;
-            }
-            input[type="text"],
-            input[type="email"],
-            textarea{
-                width: 100%;
-                padding: 10px;
-                margin-bottom: 10px;
-            }
-            button{
-                padding: 10px 20px;
-                background-color: #333;
-                color: #555;
-                border: none;
-                cursor: pointer;
-            }
-            button:hover{
-                margin-right:0;
-                 background-color:#fff;}
-            </style>
-            <h1>Welcome to Matandaria Website</h1>
-        </header>
-        <main>
-            <section>
-                <h2>
-                    About us
-                </h2>
-                <p>Welcome to Matandaria Website.</p>
-            </section>
-            <section>
-                <h2>Services</h2>
-                <p>We provide quality services</p>
-            </section>
-            <section>
-                <h2>Products</h2>
-                <button type="explore">Click me!</button>
-            </section>
-            <section>
-                <h2>
-                    contact us
-                </h2>
-                <p>Phone no: 0794218899</p>
-            </section>
-            <section>
-                <h2>Provide your details</h2>
-                <form action="/contact"method="post">
-                    <label for="name">Name:
-                    </label>
-                   <input type="text"id="name"name="name"required>
-                   <br>
-                    <label for="email">Email:</label>
-                    <input type="email"id="email"name="email"required>
-                    <br>
-                    <label for="message">Message:
-                    </label>
-                    <textarea id="message"name="message"required>
-                    </textarea><br>
-                    <button type="submit">Send Message</button>
-                </form>
-            </section>
-        </main>
-        <footer>
-            <p>
-                &copy;2024 Matandaria Website. All rights reserved.
-            </p>
-        </footer>
-    </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>E-Commerce Website</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar {
+  background-color: black;
+}
+
+.navbar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+.navbar ul li {
+  margin: 0 15px;
+}
+
+.navbar ul li a {
+  text-decoration: none;
+  color: gold;
+  font-size: 18px;
+}
+
+.content {
+  text-align: center;
+  padding: 50px;
+}
+
+h1 {
+  color: #333;
+}
+
+h2 {
+  color: #333;
+}
+
+p {
+  color: #666;
+}
+
+    
+  </style>
+</head>
+<body>
+  <nav class="navbar">
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About Us</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#products">Products</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <div class="content" id="home">
+    <h1>Welcome to Our E-Commerce Website</h1>
+    <p>Explore our collection of products and services!</p>
+  </div>
+
+  <div class="content" id="about">
+    <h2>About Us</h2>
+    <p>We are dedicated to providing the best shopping experience for our customers.</p>
+  </div>
+
+  <div class="content" id="services">
+    <h2>Our Services</h2>
+    <ul>
+      <li>Fast Shipping</li>
+      <li>24/7 Customer Support</li>
+      <li>Easy Returns</li>
+    </ul>
+  </div>
+
+  <div class="content" id="products">
+    <h2>Our Products</h2>
+    <ul>
+      <li>Electronics</li>
+      <li>Clothing</li>
+      <li>Home Appliances</li>
+    </ul>
+  </div>
+
+  <div class="content" id="contact">
+    <h2>Contact Us</h2>
+    <p>Have questions? Reach out to us:</p>
+    <p>Email: contact@ecommerce.com</p>
+    <p>Phone: 123-456-7890</p>
+  </div>
+
+  <script src="script.js"></script>
+</body>
 </html>
