--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>E-Commerce Website</title>
+  <title>Matandaria Boutique</title>
   <link rel="stylesheet" href="style.css">
   <style>
     body {
@@ -21,7 +21,7 @@
   margin: 0;
   padding: 10px;
   display: flex;
-  justify-content: center;
+  justify-content: left;
 }
 
 .navbar ul li {
@@ -35,7 +35,7 @@
 }
 
 .content {
-  text-align: center;
+  text-align: left;
   padding: 50px;
 }
 
